--- a/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/scss/styles.scss
+++ b/Nikola Rabrenovic - Praksa/DVG COMPANY SUBOTICA/scss/styles.scss
@@ -7,6 +7,7 @@
 *{
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 :root{
@@ -33,6 +34,13 @@ body {
   margin: 0;
   padding: 0;
 }
+
+.container-main{
+    width: 1440px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 body{
     margin-left: auto;
         margin-right: auto;
@@ -224,6 +232,7 @@ body{
         }
         .line2{
             margin-left: $value*7;
+            max-width: 100%;
         }
     }
     }
@@ -599,6 +608,12 @@ body{
     }
     
     @media screen and (min-width: 769px) and (max-width:1023px) {
+        .container-main{
+            width: 1023px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
         body{
             width: 1024px;
         }
@@ -611,11 +626,28 @@ body{
         #lista2{
             display: none;
         }
+        #modalbox{
+            max-width: 300px;
+        }
     }
     
     @media screen and (min-width: 481px) and (max-width:768px) {
+        .container-main{
+            width: 768px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .line2{
+            max-width: 768px !important;
+            margin-left: 0px !important;
+        }
         body{
             width: 768px;
+        }
+        #modal{
+             width: 90%;
+             padding: 60px 40px;
+             font-size: 16px;
         }
         .dvgs{
             max-width: 100%;
@@ -685,10 +717,10 @@ body{
         .products{
             padding-top: 0px !important;
             h1{
-                margin-left: 350px !important;
+                margin: 0 auto;
             }
             #paragraph{
-                margin-left: 350px !important;
+                margin: 0 auto;
             }
         }
         .logoLast{
@@ -699,21 +731,40 @@ body{
         }
         .end-child2{
             flex-direction: column;
+            max-width: 91.5%;
         }
         .brands{
             p{
                 font-size: 14px !important;
-                margin-left: 350px !important;
+                margin:auto;
             }
             .btn2{
                 margin-left: 270px !important;
             }
         }
+
+        #modalbox{
+            max-width: 150px;
+        }
     }
     
     @media screen and (max-width:480px) {
+        .container-main{
+            width: auto;
+            margin-left: auto;
+            margin-right: auto;
+        }
+        .line2{
+            max-width: 320px !important;
+            margin-left: 0px !important;
+        }
         body{
             width: 320px !important;
+        }
+        #modal{
+             width: 100%;
+             padding: 40px 20px;
+             font-size: 14px;
         }
         .dvgs{
             max-width: 100%;
@@ -782,10 +833,10 @@ body{
         .products{
             padding-top: 0px !important;
             h1{
-                margin-left: 0px !important;
+                margin: 0 auto 50px auto;
             }
             #paragraph{
-                margin-left: 0px !important;
+                margin: 50px auto;
             }
         }
         .logoLast{
@@ -796,15 +847,19 @@ body{
         }
         .end-child2{
             flex-direction: column;
+            max-width: 85%;
         }
         .brands{
             p{
                 font-size: 14px !important;
-                margin-left: 0px !important;
+                margin:auto;
             }
             .btn2{
                 margin-left: 0px !important;
             }
+        }
+        #modalbox{
+            max-width: 150px !important;
         }
     }
 
